--- a/_config.yml
+++ b/_config.yml
@@ -38,8 +38,8 @@ google_verify: "SkiyuGpJOKT74vv5GmXLvYXXDkXy4v8VWPtbelYz3Hs"
 links:
   - title: About Me
     url: /
-  - title: Teams
-    url: /teams/
+  # - title: Teams
+  #   url: /teams/
   - title: Publications
     url: /publications/
   - title: Awards
