--- a/_config.yml
+++ b/_config.yml
@@ -44,10 +44,10 @@ links:
     url: /publications/
   - title: Awards
     url: /awards/
-  - title: Hobbies
-    url: /hobbies/
-  - title: Blogs
-    url: /blogs/
+  # - title: Hobbies
+  #   url: /hobbies/
+  - title: Moment
+    url: /moment/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: China/Beijing
