--- a/_config.yml
+++ b/_config.yml
@@ -46,8 +46,8 @@ links:
     url: /awards/
   # - title: Hobbies
   #   url: /hobbies/
-  - title: Moment
-    url: /moment/
+  - title: Blog
+    url: /blog/
 
 # http://en.wikipedia.org/wiki/List_of_tz_database_time_zones
 timezone: China/Beijing
