--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ owner:
   cv: https://lutaoyan.github.io/file/ylt_resume.pdf
   # Social networking links are used in author-bio sidebar. Update and remove as you like.
   # twitter: lancecai2002
-  github: LutaoYan
+  # github: LutaoYan
   # linkedin: hanlincai
   # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   bilibili: 346682748
