--- a/_config.yml
+++ b/_config.yml
@@ -40,10 +40,12 @@ links:
     url: /
   # - title: Teams
   #   url: /teams/
-  - title: Publications
-    url: /publications/
-  - title: Awards
-    url: /awards/
+  # - title: Publications
+  #   url: /publications/
+  - title: Honor
+    url: /honor/
+  # - title: Awards
+  #   url: /awards/
   # - title: Hobbies
   #   url: /hobbies/
   - title: Moment
