--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ owner:
   # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
   bilibili: 346682748
   # researchgate: https://www.researchgate.net/profile/Hanlin-Cai
-  # zhihu: https://www.zhihu.com/people/chlire
+  zhihu: https://www.zhihu.com/people/nian-lai-guo-dao-69
   # facebook: caihanlin2002
   # instagram: lancecai2002
   # lastfm:
