--- a/_config.yml
+++ b/_config.yml
@@ -15,7 +15,7 @@ owner:
   # twitter: lancecai2002
   github: LutaoYan
   # linkedin: hanlincai
-  # scholar: https://scholar.google.com/citations?user=8igSoWgAAAAJ
+  scholar: https://scholar.google.com/citations?user=QmD2qrYAAAAJ&hl=zh-CN
   bilibili: 346682748
   # researchgate: https://www.researchgate.net/profile/Hanlin-Cai
   zhihu: https://www.zhihu.com/people/nian-lai-guo-dao-69
