--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@ title: Lutao Yan
 # tagline: Here is personal website of Hanlin Cai. Powered by Jekyll, based on the Minimal Mistakes theme.
 # description: Two roads diverged in woods, I took the one less traveled by.
 #Comment out url when working locally to resolve base urls correctly
-url: https://lutaoyan.github.io/
+url: https://yanlutao-scut.github.io/
 
 # Owner/author information
 owner:
