--- a/_config.yml
+++ b/_config.yml
@@ -40,10 +40,10 @@ links:
     url: /
   # - title: Teams
   #   url: /teams/
-  # - title: Publications
-  #   url: /publications/
-  - title: Honor
-    url: /honor/
+  - title: Publications
+    url: /publications/
+  # - title: Honor
+  #   url: /honor/
   # - title: Awards
   #   url: /awards/
   # - title: Hobbies
